--- a/_posts/2021-12-30.first.md
+++ b/_posts/2021-12-30.first.md
@@ -8,3 +8,5 @@ title:  "첫 포스팅 입니다."
 하루에 1개이상의 포스팅을 목적으로 블로그를 시작했습니다.
 
 앞으로 열심히 해보겠습니다.
+
+<img src="../images/2021-12-30.first/image-20211230165038860.png" alt="image-20211230165038860" style="zoom:200%;" />
