--- a/_posts/2022-04-15-first.md
+++ b/_posts/2022-04-15-first.md
@@ -1,18 +1,21 @@
 ---
 layout: single
-title:  "프로그램 개발이 두려운 분들께"
+title:  "프로그램 개발이 두려운 당신에게"
 ---
 
-# 프로그램 개발이 두려운 분들께
+# 프로그램 개발이 두려운 당신에게(intro)
 
-이전직장 다닐때 알게된 디자이너 분이 있었다. 
-어느날 얘기를 하다 자기는 개발도 하고 싶어 시도 해봤지만 실패했다고 그후부터 개발이 너무 어렵고 두렵다라는 말을 하셨다.
+이전직장 다닐때 알게된 디자이너 분이 있었다.
+
+어느날 얘기를 하다 자기는 개발도 하고 싶어 스스로 시도 해봤지만 실패했다고 그후부터 개발이 너무 어렵고 두렵다라는 말을 하셨다.
 
 그분에게 호기롭게 제가 절대 개발자는 아니라 개발을 알려드릴순 없지만 두려움을 없애드리고 
 결과물을 만드시게는 해드릴수 있다고 말했다.
 
+~~(...그러나 그약속은 끝내 이루어지지 못했다.)~~
 
-...그러나 그약속은 끝내 이루어지지 못했다.
+정리를 해야지하며 미루다 오늘 회사 인턴분이 조심스럽게 다가와 이것저것 질문을 하셨는데 궁금해 하시는것들과 필요하신것들이 
+내가 이전회사에서 후배들을 가르쳤던것에서 잘정리만 하면 누군가에겐 도움이 되겠구나 싶어 정리겸 글을 써본다.   
 
-
+개발을 가르치는 것이 아닌 '결과물'을 만들게 하는 수준이니 개발자분들은 이글까지만 보시고 2022 aws summit 지금 신청 받으니 그거 신청하러 가면 된다.
 
