--- a/_posts/2022-04-16-second.md
+++ b/_posts/2022-04-16-second.md
@@ -1,8 +1,7 @@
 ---
 layout: single
+title: 진짜 시작하기 
 ---
-
-# 진짜 시작하기
 
 퇴근시간 무렵 인턴분께서 프론트엔드(리엑트)와 백엔드(스프링부트) 구조에 대한 질문을 하셨다.
 설명을 해드리는데 이걸 하실수 있을까? 라는 생각이 들었다. 
