--- a/_posts/2022-04-15-first.md
+++ b/_posts/2022-04-15-first.md
@@ -1,8 +1,8 @@
 ---
 layout: single
+title:웹 개발이 두려운 당신에게(intro)
 ---
 
-# 웹 개발이 두려운 당신에게(intro)
 
 이전직장 디자이너 분과 대화중 자기는 개발도 해보고 싶어 혼자 시도 해봤지만 실패했다고 혼자하기 너무어렵다는 말을 하셨다.
 
