--- a/_posts/2022-04-16-second.md
+++ b/_posts/2022-04-16-second.md
@@ -19,7 +19,7 @@ title: 진짜 시작하기
 많은 업체에서 사용하고 있고 많은 교육기관에서 가르쳐주고 있는 인턴분께서 말씀하신 구조라면 
 알아야 할것이 더 늘어난다.
 
-`nodejs, express, react, babel, Springboot 등`  
+`nodejs, express, react, Webpack, babel, Springboot 등`  
 
 **알아야 할게 너~~무 많다.**
 
