--- a/_posts/2022-04-16-second.md
+++ b/_posts/2022-04-16-second.md
@@ -23,5 +23,5 @@ title: 진짜 시작하기
 
 **알아야 할게 너~~무 많다.**
 
-묶어서 설명을 하면 나같은 범재는 절대 이해못할것 같다. 그래서 웹개발 시작했던때로 돌아가 하나씩 설명하고 하나씩 연결해나가보면서
+전체를 보면 누구나 이해하기가 쉽지않다. 그래서 웹개발 시작했던때로 돌아가 하나씩 설명하고 하나씩 연결해나가보면서
 정리해보고자 한다.
