--- a/_posts/2022-04-16-first.md
+++ b/_posts/2022-04-16-first.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:시작하기
+title: 시작하기
 ---
 
 대학교시절 C, C++, Java를 했지만 그렇게 흥미를 못느끼던 어느날 스마트폰이란것이 등장했다.
@@ -19,7 +19,7 @@ HelloAndroid
 
     └ AndroidManifext.xml
 
-`gen, libs, assets`등의 폴더가 있긴 했으나 `gradle`도 없던 시절이라 프로젝트 구조가 굉장히 심플했다.
+`gen, libs, assets`등의 폴더가 있긴 했으나 `gradle`도 없던 시절이라 프로젝트 구조가 심플했다.
 
 그렇게 첫 입사를 하고 2년간 큰규모의 `안드로이드 어플리케이션만` 만들다 웹개발이 주력인 회사로 이직을 하게되었다.
 
