--- a/_posts/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
+++ b/_posts/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
@@ -1,10 +1,11 @@
 ---
 layout: single 
 title: Java 웹 애플리케이션 아키텍쳐 
-categories: WebApplication tag: [Java Web Application Architecture]
+categories: WebApplication 
+tag: [Architecture]
 ---
 
-<img src="../images/javaarchitecture.jpg" width="80%"></img>
+<img src="../images/javaarchitecture.jpg" width="80%"/>
 
 # - 초고 - 
 
@@ -25,17 +26,17 @@ DBMS는 Oracle,Mysql,Mssql,Tibero 등 다양하게 이용했던것 같다.
 >내용들은 웹개발자라면 깊이 알진 못해도 가볍게 알아야 되는정도로만 다뤄보겠다. 각각에 대한 설명을 깊게들어가면 그것만으로도 분량이 엄청나다. 
 그리고 필자보다 훨씬 뛰어난분들께서 선행적으로 잘 정리해주신게 있으니 가볍게 보도록 하자. 
 
-##1. Browser
+## 1. Browser
 사용자와의 상호작용을 해주는 매체이다. WAS에서 생성된 ui를 랜더링 해서 표시해준다.
 사용자의 요청을 request 하고 response 받는다.
 MS진형에서 Internet explorer가 오랫동안 사용되었으나 여러문제로 인해 Edge로 대체되었고 mac에서는 apple의 safari가 주로 이용되고 있다.
 범용적으로는 구글진형의 크롬이 쓰이고 있고 그로 인해 점유률 1위는 현재 크롬이다. firefox, naver에서 만든 whale등도 상당히 괜찮은 브라우저로 손꼽힌다.
 
-##2. Web server
+## 2. Web server
 정적인 컨텐츠(Html, Css, Jpeg 등)를 제공한다. 브라우저의 요청을 어플리케이션 서버로 위임시킨다. 
 오랫동안 Apache를 이용했으며 요즘은 nginx도 많이 사용된다.
 
-##3. Was 
+## 3. Was 
 동적인 컨텐츠를 제공한다. 요청을 필요에 따라 DBMS에 질의 할수 있고 그정보를 바탕으로 HttpResponse가공하여 WebServer에 전달한다.
 전세계적으로 Tomcat을 많이 이용하고 국내에서 Tmax회사의 Jeus를 사용하는 경우를 더러 봤다. JBoss, Web Sphere 등도 있다는것만 알아두자.  
 
