--- a/_posts/2022-07-02-react_느즈막히_시작하는_리엑트.md
+++ b/_posts/2022-07-02-react_느즈막히_시작하는_리엑트.md
@@ -149,16 +149,19 @@ https://ko.reactjs.org/docs/faq-structure.html
 * {/* 주석입니다. */}
 
 ### 2) Dom Class는 ClassName으로
-* div className="App"
+* ``` <div className="App" /> ```
 
 ### 3) Dom Style은 style={{스타일이름:'값'}}
-* div style={{display:'none'}}
+* ```<div style={{display:'none'}} />```
 * 어지간하면 스타일은 쓰지말자
 
 ### 4) Javascript 변수는 {변수}
-* img src={logo}
+* ``` <img src={logo}/> ```
 
 ### 5) Tag는 닫아주세요
+
+### 6) Component Function의 첫번째 알파벳은 대문자로
+* ``` function CustomBtn() { }```
 
 
 <br>
@@ -183,4 +186,4 @@ https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Functions/Arrow_f
 
 > 초보분들에게 리엑트등의 라이브러리를 추천하지 않는 가장큰 이유는 '선언적'인 코딩때문이다.
 > 처음부터 익숙해지면 좋을수도 있으나 많은 사람들이 그럴수 없다. 대부분 혼란을 겪는부분이 이때문이라 생각한다. 이것에 대해선
-> 언젠간 다뤄보겠다. 이번 포스팅과 프로젝트는 타의로 프로그램밍을 하고 있는 분과 같이 해야하기 때문에 최대한 '명력적'으로 진행하려 한다.
+> 언젠간 다뤄보겠다. 이번 포스팅과 프로젝트는 최대한 '명력적'으로 진행하려 한다.
