--- a/_posts/2022-07-02-react_느즈막히_시작하는_리엑트.md
+++ b/_posts/2022-07-02-react_느즈막히_시작하는_리엑트.md
@@ -9,8 +9,8 @@ tag: [React]
 
 
 ## 1. React 시도해보기
-
-### 1) CRA(Create React App)
+- - -
+### 1.1 CRA(Create React App)
 
 공식문서가 아주잘되어 있기에 아래링크대로 진행해서 프로젝트를 만들어보자.
 **이번 프로젝트는 CRA를 통해 진행할 예정이다.**
@@ -28,7 +28,7 @@ npx create-react-app 앱이름 --template typescript
 
 * Webpack, Babel 셋팅을 따로 할 필요가 없다.
 
-### 2) Next.Js
+### 1.2 Next.Js
 
 SSR을 위해 사용하는 리엑트 프레임워크이다.
 
@@ -36,7 +36,7 @@ SSR을 위해 사용하는 리엑트 프레임워크이다.
 https://nextjs.org/learn/foundations/about-nextjs
 </pre>
 
-### 3) Gatsby
+### 1.3 Gatsby
 정적 사이트를 만들기 위해 사용하는 프레임워크이다.
 
 <pre>
@@ -44,7 +44,7 @@ https://ko.reactjs.org/docs/create-a-new-react-app.html
 </pre>
 
 
-### 4) 직접설정
+### 1.4 직접설정
 몇년전에 CRA가 없었을때 쓰던 방식으로 알고 있다. Webpack, babel, 모듈 설정들 할게 많아서
 리엑트의 진입장벽이 굉장히 높았다고 알고 있다. 굳이 지금 할만한 방식인지는 잘 모르겠다.
 
@@ -58,11 +58,10 @@ https://ko.reactjs.org/docs/create-a-new-react-app.html
 > * CRA를 통해 만든 리엑트 프로젝트도 SSR을 사용할순 있다. 다만 어려울뿐.
 > * React라우팅은 React Route의 컴포넌트 기반,Next.js Route의 디렉터리 기반으로 할수 있다.
 
-<hr>
 
 ## 2. CRA 프로젝트 살펴보기
-
-### 1) 파일구조 살펴보기
+- - -
+### 2.1 파일구조 살펴보기
 프로젝트를 생성하고 나면 아래와같은 폴더, 폴더구조를 가진다.
 <pre>
  프로젝트 이름
@@ -93,7 +92,7 @@ https://ko.reactjs.org/docs/faq-structure.html
 이번에 준비하면서 많은 블로그와 영상을 보면서 한가지 아쉬웠던게 초보들을 위한 자료인데 파일구조에 대한
 언급이 많이 없었다. 개인적으론 굉장히 중요하다고 생각하는데 말이다.
 
-### 2) package.json 살펴보기
+### 2.2 package.json 살펴보기
 <pre>
 {
   "name": "rsample",
@@ -142,44 +141,44 @@ https://ko.reactjs.org/docs/faq-structure.html
 > * eject하면 왜 했는지 설문해달라고 한다. 
 
 
-<hr>
+
 
 ## 3. Jsx 문법
-### 1) 주석은 {/* */}
+- - -
+### 3.1 주석은 {/* */}
 * {/* 주석입니다. */}
 
-### 2) Dom Class는 ClassName으로
+### 3.2 Dom Class는 ClassName으로
 * ``` <div className="App" /> ```
 
-### 3) Dom Style은 style={{스타일이름:'값'}}
+### 3.3 Dom Style은 style={{스타일이름:'값'}}
 * ```<div style={{display:'none'}} />```
 * 어지간하면 스타일은 쓰지말자
 
-### 4) Javascript 변수는 {변수}
+### 3.4 Javascript 변수는 {변수}
 * ``` <img src={logo}/> ```
 
-### 5) Tag는 닫아주세요
+### 3.5 Tag는 닫아주세요
 
-### 6) Component Function의 첫번째 알파벳은 대문자로
+### 3.6 Component Function의 첫번째 알파벳은 대문자로
 * ``` function CustomBtn() { }```
 
 
 <br>
 
 
-<hr>
-
 ## 4. Javascript 조금만 더 알기
+- - -
 변수(let, const, var), if, for, function에 대해 알면 초보라고 생각한다.
 하지만 리엑트를 하기위해서 조금 낯설어 보이는 기능들이 등장하는데 미리 알고 넘어가자.
 조금만 더 알아야되는 이유는 리엑트를 설명하면서 다시 다뤄보겠다.
 
-### 1) Destructuring(구조분해할당)
+### 4.1 Destructuring(구조분해할당)
 이번 포스팅은 날로먹는것 같다. MDN을 참조하자.
 
 https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment
 
-### 2) Arrow function(화살표 함수)
+### 4.2 Arrow function(화살표 함수)
 당분간 회는 안먹어도 될듯하다. MDN을 참조하자.
 https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Functions/Arrow_functions
 
