--- a/_posts/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
+++ b/_posts/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
@@ -5,7 +5,7 @@ categories: WebApplication
 tag: [Architecture]
 ---
 
-<img src="webapplication/images/javaarchitecture.jpg" width="80%"/>
+<img src="../images/javaarchitecture.jpg" width="80%"/>
 
 # - 초고 - 
 
