--- a/_posts/2023-10-14-workout_운동1일차.md
+++ b/_posts/2023-10-14-workout_운동1일차.md
@@ -51,7 +51,7 @@ tag: [workout]
 지금은 하나도 안아프게 이완됨
 ````
 
-https://youtu.be/1m1COtnxu04?si=SzJ8PSz1YUV3RJ_1
+[스트레칭영상 바로가기](https://youtu.be/1m1COtnxu04?si=SzJ8PSz1YUV3RJ_1)
 
 ## 3. 운동
 ````
@@ -85,7 +85,7 @@ https://youtu.be/1m1COtnxu04?si=SzJ8PSz1YUV3RJ_1
 골반넓이하고 앞으로 나란히
 뒤꿈치만 디뎌야 함
 ````
-https://youtu.be/F9XwS-HtHOM?si=ZUh1zgndcgLpDMhG
+[운동영상 바로가기](https://youtu.be/1m1COtnxu04?si=SzJ8PSz1YUV3RJ_1)
 
 ## 수정사항
 1. 운동 5번 폼롤러위에서 하는 운동을 뒤꿈치를 붙이고 하고 있었음.
