--- a/_posts/2023-10-14-workout_운동1일차.md
+++ b/_posts/2023-10-14-workout_운동1일차.md
@@ -51,7 +51,7 @@ tag: [workout]
 지금은 하나도 안아프게 이완됨
 ````
 
-[스트레칭영상 바로가기](https://youtu.be/1m1COtnxu04?si=SzJ8PSz1YUV3RJ_1)
+[스트레칭영상 바로가기](https://youtu.be/1m1COtnxu04)
 
 ## 3. 운동
 ````
@@ -85,7 +85,7 @@ tag: [workout]
 골반넓이하고 앞으로 나란히
 뒤꿈치만 디뎌야 함
 ````
-[운동영상 바로가기](https://youtu.be/1m1COtnxu04?si=SzJ8PSz1YUV3RJ_1)
+[운동영상 바로가기](https://youtu.be/F9XwS-HtHOM)
 
 ## 수정사항
 1. 운동 5번 폼롤러위에서 하는 운동을 뒤꿈치를 붙이고 하고 있었음.
@@ -98,3 +98,4 @@ tag: [workout]
 4. 등을 누르면 어떤근육이 활성화 되는건가요?
 5. 등을 너무 세게 안누르고 손이 안들어갈정도만 유지하면 될까요? 두꺼운 매트가 아니면 통증이 있습니다.
 6. 무릎과 허벅지 사이 무릎 구브리며 푸는 스트레칭이 허벅지 정면 보다는 대퇴직근? 쪽을 하는게 맞는걸까요? 정면은 뻑뻑하다는 느낌이 없고 대퇴직근은 뻑뻑합니다.
+7. 운동초기(2~3일차)까지 오른쪽 서혜부 쪽 근육통이 있었는데 제가 제대로 하고 있는걸까요?
