add 옵ì시디언 md문법

--- a/_posts/2024-01-24-MD_작성법.md
+++ b/_posts/2024-01-24-MD_작성법.md
@@ -5,8 +5,8 @@ categories: info
 tag: [markdown]
 ---
 
-회사 팀원분들과 학습용 도구로서 obsidian을 사용해보기로 했다.
-간단하게 마크다운 문법과 obsidian만의 문법을 살펴보자.
+회사 팀원분들과 학습용 도구로서 obsidian을 사용해보기로 했다.  
+이 포스팅에서는 기본적인 문법과 개발자에게 필요한 MD 문법을 알아보자.
 
 ## 1. 기본문법
 ```markdown
@@ -87,7 +87,83 @@ tag: [markdown]
 <hr/>
 
 ```markdown
-6) code
+6) text link
+   [Google](https://google.com, "google link")
+```
+> [Google](https://google.com, "google link")
+
+<hr/>
+
+## 2. 꾸미기
+
+```markdown
+7) contour
+   <hr/>
+```
+> <hr/>
+
+<hr/>
+
+```markdown
+8) image
+   <img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
+   * 다른방법도 있지만 사이즈 조절이 안되서 위 방법으로 쓰자
+```
+> <img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
+
+<hr/>
+
+```markdown
+9) checkbox
+    - [ ] unchecked box
+    - [x] checked box
+```
+> - [ ] unchecked box
+> - [x] checked box
+
+<hr/>
+
+```markdown
+10) footnote(각주)
+    각주<sup>[1](#각주 이름)</sup>
+    <a name="각주 이름">1</a>: 각주에 대한 설명
+```
+> 각주<sup>[1](#각주 이름)</sup>  
+> <a name="각주 이름">1</a>: 각주에 대한 설명
+
+<hr/>
+
+```markdown
+11) expand(펼침)
+    <details><summary>펼치기</summary>
+    내용
+    </details>    
+```
+> <details><summary>펼치기</summary>내용</details>    
+
+<hr/>
+
+```markdown
+12) table
+    |제목 셀1|제목 셀2|제목 셀3|제목 셀4|
+    |---|---|---|---|
+    |내용 1|내용 2|내용 3|내용 4|
+    |내용 5|내용 6|내용 7|내용 8|
+    |내용 9|내용 10|내용 11|내용 12|
+```
+※ 이건,,,,쓸까 싶다.
+
+|제목 셀1|제목 셀2|제목 셀3|제목 셀4|
+|---|---|---|---|
+|내용 1|내용 2|내용 3|내용 4
+|내용 5|내용 6|내용 7|내용 8|
+|내용 9|내용 10|내용 11|내용 12|    
+
+<hr/>
+
+## 3. 개발자를 위한 문법
+```markdown
+13) code
    a) 4번띄워쓰기
           여기부터 코드
    b) tag
@@ -105,80 +181,6 @@ tag: [markdown]
 
 <hr/>
 
-
-
-```markdown
-7) text link
-   [Google](https://google.com, "google link")
-```
-> [Google](https://google.com, "google link")
-
-<hr/> 
-
-```markdown
-8) contour
-   <hr/>
-```
-> <hr/>
-
-<hr/>
-
-```markdown
-9) image
-   <img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
-   * 다른방법도 있지만 사이즈 조절이 안되서 위 방법으로 쓰자
-```
-> <img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
-
-<hr/>
-
-```markdown
-10) checkbox
-    - [ ] unchecked box
-    - [x] checked box
-```
-> - [ ] unchecked box
-> - [x] checked box
-
-<hr/>
-
-```markdown
-11) footnote(각주)
-    각주<sup>[1](#각주 이름)</sup>
-    <a name="각주 이름">1</a>: 각주에 대한 설명
-```
-> 각주<sup>[1](#각주 이름)</sup>  
-> <a name="각주 이름">1</a>: 각주에 대한 설명
-
-<hr/>
-
-```markdown
-12) expand(펼침)
-    <details><summary>펼치기</summary>
-    내용
-    </details>    
-```
-> <details><summary>펼치기</summary>내용</details>    
-
-<hr/>
-
-```markdown
-13) table
-    |제목 셀1|제목 셀2|제목 셀3|제목 셀4|
-    |---|---|---|---|
-    |내용 1|내용 2|내용 3|내용 4|
-    |내용 5|내용 6|내용 7|내용 8|
-    |내용 9|내용 10|내용 11|내용 12|
-```
-※ 이건,,,,쓸까 싶다.
-
-|제목 셀1|제목 셀2|제목 셀3|제목 셀4|
-|---|---|---|---|
-|내용 1|내용 2|내용 3|내용 4
-|내용 5|내용 6|내용 7|내용 8|
-|내용 9|내용 10|내용 11|내용 12|    
-
-<hr/>
 
 ```markdown
 14) directory tree
