modify content convention

--- a/_posts/2024-01-24-MD_작성법.md
+++ b/_posts/2024-01-24-MD_작성법.md
@@ -9,8 +9,8 @@ tag: [markdown]
 이 포스팅에서는 기본적인 문법과 개발자에게 필요한 MD 문법을 알아보자.
 
 ## 1. 기본문법
+### 1) Headers
 ```markdown
-1) Headers
 # H1
 ## H2
 ...
@@ -20,13 +20,13 @@ tag: [markdown]
 > ## H2
 > ###### H6
 
-<hr/> 
+<hr/>
 
+### 2) line break
 ```markdown
-2) line break
-   a) newline
-      두번띄우고 엔터
-   b) 엔터두번
+a) newline
+   두번띄우고 엔터
+b) 엔터두번
 ```
 > 줄바꿈  
 > 은 이렇게 하던가
@@ -35,16 +35,17 @@ tag: [markdown]
 
 <hr/>
 
+
+### 3) text style
 ```markdown
-3) text style
-   a) italic
-      *single asterisks*
-      _single underscores_
-   b) bold
-      **double asterisks**
-      __double underscores__
-   c) canceline
-      ~~cancelline~~
+a) italic
+   *single asterisks*
+   _single underscores_
+b) bold
+   **double asterisks**
+   __double underscores__
+c) canceline
+   ~~cancelline~~
 ```
 > *single asterisks*
 >
@@ -54,8 +55,9 @@ tag: [markdown]
 
 <hr/>
 
+
+### 4) BlockQuote(인용)
 ```markdown
-4) BlockQuote(인용)
 > 인용문장
 * 인용안에 다른 마크다운 문법 이용 가능
 ```
@@ -64,18 +66,19 @@ tag: [markdown]
 
 <hr/>
 
+
+### 5) list
 ```markdown
-5) list
-   a) item
-      - listitem01
-      - listitem02
-   b) number 
-      1. numberitem01
-      2. numberitem02
-   c) sign item 
-      * signitem01
-      + signitem02
-      - signitem03
+a) item
+   - listitem01
+   - listitem02
+b) number 
+   1. numberitem01
+   2. numberitem02
+c) sign item 
+   * signitem01
+   + signitem02
+   - signitem03
 ```
 > - listitem01
 > - listitem02
@@ -86,9 +89,10 @@ tag: [markdown]
 > - signitem03
 <hr/>
 
+
+### 6) text link
 ```markdown
-6) text link
-   [Google](https://google.com, "google link")
+[Google](https://google.com, "google link")
 ```
 > [Google](https://google.com, "google link")
 
@@ -96,60 +100,60 @@ tag: [markdown]
 
 ## 2. 꾸미기
 
+### 7) contour
 ```markdown
-7) contour
-   <hr/>
+<hr/>
 ```
 > <hr/>
 
 <hr/>
 
+### 8) image
 ```markdown
-8) image
-   <img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
-   * 다른방법도 있지만 사이즈 조절이 안되서 위 방법으로 쓰자
+<img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
+* 다른방법도 있지만 사이즈 조절이 안되서 위 방법으로 쓰자
 ```
 > <img src="/images/git/img.jpg" width="40%" height="30%" title="타이틀" alt="설명"></img>
 
 <hr/>
 
+### 9) checkbox
 ```markdown
-9) checkbox
-    - [ ] unchecked box
-    - [x] checked box
+- [ ] unchecked box
+- [x] checked box
 ```
 > - [ ] unchecked box
 > - [x] checked box
 
 <hr/>
 
+### 10) footnote(각주)
 ```markdown
-10) footnote(각주)
-    각주<sup>[1](#각주 이름)</sup>
-    <a name="각주 이름">1</a>: 각주에 대한 설명
+각주<sup>[1](#각주 이름)</sup>
+<a name="각주 이름">1</a>: 각주에 대한 설명
 ```
 > 각주<sup>[1](#각주 이름)</sup>  
 > <a name="각주 이름">1</a>: 각주에 대한 설명
 
 <hr/>
 
+### 11) expand(펼침)
 ```markdown
-11) expand(펼침)
-    <details><summary>펼치기</summary>
-    내용
-    </details>    
+<details><summary>펼치기</summary>
+내용
+</details>    
 ```
 > <details><summary>펼치기</summary>내용</details>    
 
 <hr/>
 
+### 12) table
 ```markdown
-12) table
-    |제목 셀1|제목 셀2|제목 셀3|제목 셀4|
-    |---|---|---|---|
-    |내용 1|내용 2|내용 3|내용 4|
-    |내용 5|내용 6|내용 7|내용 8|
-    |내용 9|내용 10|내용 11|내용 12|
+|제목 셀1|제목 셀2|제목 셀3|제목 셀4|
+|---|---|---|---|
+|내용 1|내용 2|내용 3|내용 4|
+|내용 5|내용 6|내용 7|내용 8|
+|내용 9|내용 10|내용 11|내용 12|
 ```
 ※ 이건,,,,쓸까 싶다.
 
@@ -162,17 +166,16 @@ tag: [markdown]
 <hr/>
 
 ## 3. 개발자를 위한 문법
+### 13) code
 ```markdown
-13) code
-   a) 4번띄워쓰기
-          여기부터 코드
-   b) tag
-      <code>this is code</code>
-      <pre>this is code</pre>
-   c) 3개의 backtick
-      ```
-      * backtick 옆에 언어를 표시하여 언어별 특성을 표시할 수 있다.
-        ```html
+a) 4번띄워쓰기
+       여기부터 코드
+b) tag
+   <code>this is code</code>
+   <pre>this is code</pre>
+c) 3개의 backtick(추천)
+   * backtick 옆에 언어를 표시하여 언어별 특성을 표시할 수 있다.
+   ```html
 ```
 
 >     여기부터 코드
@@ -181,9 +184,8 @@ tag: [markdown]
 
 <hr/>
 
-
+### 14) directory tree
 ```markdown
-14) directory tree
     ├── dir1
     │   ├── file11.ext
     │   └── file12.ext
