--- a/_posts/2024-01-24-옵시디언_MD_작성법.md
+++ b/_posts/2024-01-24-옵시디언_MD_작성법.md
@@ -6,16 +6,17 @@ tag: [markdown, obsidian]
 ---
 
 obsidian만의 문법을 살펴보자.  
-우선 아래와 같이 문서 두개가 있다.  
+아래와 같이 문서 두개가 있다.  
 <img src="/images/obsidian/img.png">
 
 두문서는 아래와 같이 어떠한 연결도 되어 있지 않다.  
 <img src="/images/obsidian/img_1.png">
 
 ## 1. 컨텐츠
+
+### 1) relation
 ```markdown
-1) relation
-   [[연결할문서|표시할텍스트]]
+[[연결할문서|표시할텍스트]]
 ```
 
 > <img src="/images/obsidian/img_2.png" alt="문서 연결 문법">  
@@ -26,9 +27,9 @@ obsidian만의 문법을 살펴보자.
 
 <hr/> 
 
+### 2) Note Quotation(노트 인용)
 ```markdown
-2) Note Quotation(노트 인용)
-   ![[연결할문서|표시할텍스트]]
+![[연결할문서|표시할텍스트]]
 ```
 
 문서1에 문서2 내용이 인용되었다.(전체인용)
@@ -36,9 +37,9 @@ obsidian만의 문법을 살펴보자.
 
 <hr/>
 
+### 3) Paragraph Quotation(문단 인용)
 ```markdown
-3) Paragraph Quotation(문단 인용)
-   ![[연결할문서|표시할텍스트]]
+![[연결할문서|표시할텍스트]]
 ```
 문서1에서 인용할 문서를 선택
 > <img src="/images/obsidian/img_5.png" alt="문단 인용">
@@ -49,20 +50,20 @@ obsidian만의 문법을 살펴보자.
 
 <hr/>
 
+### 4) Callout(강조 상자)
 ```markdown
-3) Callout(강조 상자)
-   > [!note] note!
-   > note contents
-   * 띄어쓰기 중요. 
+> [!note] note!
+> note contents
+* 띄어쓰기 중요. 
 ```
 
 > <img src="/images/obsidian/img_7.png" alt="note">
 
 <hr/>
 
+### 5) Highlight
 ```markdown
-4) Highlight
-   ==Highlight text==
+==Highlight text==
 ```
 기본 문법중 **강조**와 비슷하지만 옵시디언에만 있는 문법이다.
 > <img src="/images/obsidian/img_8.png" alt="Highlight">
