add rpa contents

--- a/_posts/2024-02-06-RPA.md
+++ b/_posts/2024-02-06-RPA.md
@@ -28,6 +28,8 @@ RPA의 사전적 정의는 로보틱 처리 자동화로 bot이 비즈니스 프
 
 환경적인 특성은 개발자가 "과제"를 서버(클라우드)에 올리게 되고 특정 조건에 따라 서버는 작업용 PC에 이벤트를 발송해 자동화를 수행한다.
 
+<img src="/images/rpa/img.png" alt="RPA 구조">
+
 ## 2.RPA의 오해
 RPA는 많은 과제들이 시스템 자동화를 위해 만들어 *“자동화”* 만 포커스를 맞추고 있다.
 
@@ -56,7 +58,13 @@ PC비용이 같다고 했을때 라이센스 비용이 추가로 발생한다. 1
 RPA는 **“비즈니스 프로세스 자동화 기술”** 로 복잡한 업무들의 자동화로 구축되어야 비로소 제 역할을 할 수 있다고 생각한다.
 
 ## 3. 적합한 과제
-적합한 과제를 선별하기 앞서 RPA에서 무엇이 가능한지를 알아야 한다. RPA는 서버(클라우드)에서 특정 이벤트 기반으로 작동하는데 이벤트가 다양하고 활용하기 좋다.
+적합한 과제를 선별하기 앞서 RPA에서 무엇이 가능한지를 알아야 한다.   
+RPA는 서버(클라우드)에서 특정 이벤트 기반으로 작동하는데 이벤트의 종류는 아래와 같다.  
 hook, trigger, api 방식 등  
-이벤트를 통해 과제를 수해할 수 있다는 말은 과제별 연결이 가능하다는 말이다. 연결이 가능하단 말은 과제를 모듈로 작업하고 특정조건시 이벤트를 수행하게 하여 
-다른 모듈과의 연결을 하여 조건별 모듈단위 수행을 통해 업무를 자동화 할 수 있다.
+
+이벤트를 통해 과제를 수해할 수 있다는 말은 과제별 연결이 가능하다는 말이다.  
+연결이 가능하단 말은 과제를 모듈로 작업하고 특정조건시 이벤트를 수행하게 하고 다른 모듈과의 연결을 하여 조건별 모듈단위 수행이 가능 하다.  
+위 구조를 바탕으로 과제별 연결을 하면 하나의 큰 업무를 이룰 수 있고 내가 생각했을때 이러한 구축이 "업무 자동화"라고 생각된다.  
+
+이러한 구조를 바탕으로 업무 자동화의 예제를 다음 포스트에서 알아보자.
+[다음포스트](../RPA_과제설계)
