obsidian plugin excalidraw

--- a/_posts/2024-02-07-옵시디언_사용자플러그인.md
+++ b/_posts/2024-02-07-옵시디언_사용자플러그인.md
@@ -7,18 +7,18 @@ tag: [obsidian]
 
 사용자 플러그인을 설치 해보자
 
-1. 왼쪽하단 설정 버튼 클릭  
+### 1. 왼쪽하단 설정 버튼 클릭  
 <img src="/images/obsidian/img_9.png" alt="설정">  
-2. Community Plugins 클릭  
+### 2. Community Plugins 클릭  
 <img src="/images/obsidian/img_10.png" alt="메뉴클릭">
-3. Turn on community plugins 버튼 클릭  
+### 3. Turn on community plugins 버튼 클릭  
 <img src="/images/obsidian/img_11.png" alt="버튼클릭">
-4. browse 버튼 클릭  
+### 4. browse 버튼 클릭  
 <img src="/images/obsidian/img_12.png" alt="버튼클릭">
-5. 원하는 항목 클릭  
+### 5. 원하는 항목 클릭  
 <img src="/images/obsidian/img_13.png" alt="버튼클릭">  
 ※ Dataview클릭
-6. Install 클릭-> Enable 클릭  
+### 6. Install 클릭-> Enable 클릭  
 <img src="/images/obsidian/img_14.png" alt="버튼클릭">
 <img src="/images/obsidian/img_15.png" alt="버튼클릭">
 
