rpa task design

--- a/_posts/2024-02-06-RPA.md
+++ b/_posts/2024-02-06-RPA.md
@@ -55,7 +55,11 @@ C# = 윈도우 PC
 PC비용이 같다고 했을때 라이센스 비용이 추가로 발생한다. 1년 365일 돌아가게 하는 하나의 라이센스가 일년에 천만원이 넘는다.
 그 비용을 생각해봤을때 단순 자동화는 적합하지 않다.
 
-RPA는 **“비즈니스 프로세스 자동화 기술”** 로 복잡한 업무들의 자동화로 구축되어야 비로소 제 역할을 할 수 있다고 생각한다.
+RPA는
+<span style="color:red">
+**“비즈니스 프로세스 자동화 기술”**
+</span>
+ 로 복잡한 업무들의 자동화로 구축되어야 비로소 제 역할을 할 수 있다고 생각한다.
 
 ## 3. 적합한 과제
 적합한 과제를 선별하기 앞서 RPA에서 무엇이 가능한지를 알아야 한다.   
