--- a/_posts/2024-02-07-RPA_과제설계.md
+++ b/_posts/2024-02-07-RPA_과제설계.md
@@ -5,11 +5,32 @@ categories: RPA
 tag: [RPA]
 ---
 
-인사팀에서 업무를 자동화 한다고 생각해보자.  
-인사팀에서는 JD(Job Description)를 각 부서에서 요청 및 취합받고 이를 바탕으로 채용공고를 사이트별 상신한다.
+> 진행중인 프로젝트를 예로 들고 싶으나 혹시 문제가 될까 가상으로 만든 예시 입니다. 업무 진행의 전문성이 다소 부족 할 수 있음을 감안 부탁드립니다.
 
+인사팀 업무를 자동화 한다고 생각해보자.  
+1. 인사팀에서는 JD(Job Description)를 각 부서에서 요청 및 취합받는다.  
+2. 이를 바탕으로 채용공고를 사이트별 상신한다.  
 <img src="/images/rpa/img_1.png" alt="RPA 구조">  
 [그림1]채용공고 등록 자동화  
-※ 증원을 위한 결재 승인등 상세플로우는 설명을 위해 생략
+※ 증원을 위한 결재 승인등 상세플로우는 생략
  
-이러한 업무를 RPA로 자동화를 하면 이것이 하나의 "과제"가 되며 해당 과제는 "채용자동화"라고 이름을 붙여보자.
+이러한 업무를 RPA로 자동화를 하면 이것이 하나의 "과제"가 되며 해당 과제는 "채용자동화"라고 이름을 붙일 수 있다.  
+업무의 자동화지만 해당 과제 구축만에서 그친다면 이전 포스트에서 얘기한 "단순과제" or "시스템 자동화"라고 생각한다.
+
+그렇다면 "업무 자동화"는 어떤 모습일까. 위 예제에서 조금더 나아가 보자.  
+
+
+1. "채용자동화 과제"에서 모집공고를 등록을 완료 후 일정 시간이 지나 지원자들이 지원하기 시작했다.  
+2. 이력서들이 들어오기 시작하며 인사담당자는 각 인사 사이트를 들어가 이력서를 다운로드 받는다.  
+3. 받은 이력서를 인사팀 기준으로 식별 한 후 개발팀에 적정 이력서를 전달한다.  
+4. 개발팀은 이력서를 검토 한 후 인사담당자에게 의견 전달후 면접을 요청 한다.  
+<img src="/images/rpa/img_2.png" alt="RPA 구조">  
+
+새로운 단순 자동화 과제 "이력서검토 과제"가 생성 되었다. 단순 과제 두개가 각각 수행가능하지만 특정 이벤트로 연결을 해보자.      
+채용공고를 올릴때 항상 마감일을 두기에 "채용공고 만료"시 이력서 검토 과제를 자동으로 수행시켜주자.  
+<img src="/images/rpa/img_3.png" alt="RPA 구조">
+
+두개의 단순과제가 특정조건으로 연결이되어 수행되기 시작했다. 저 기능을 RPA에서는 "orchestra"에서 지정 할 수 있으며 만약 안된다면 저장소(DB)나 사용자 액션후 수행하게 하면 된다.
+
+이러한 단순과제 n개 이상이 특정조건에 맞게 수행되어 전체적인 업무가 자동화 되었을때 비로소 "업무 자동화"라는 이름을 사용할 수 있다고 생각한다.  
+<img src="/images/rpa/img_4.png" alt="">
