add 404 and toc

--- a/_posts/2022-04-16-어플리케이션_시작하기.md
+++ b/_posts/2022-04-16-어플리케이션_시작하기.md
@@ -3,6 +3,7 @@ layout: single
 title: 애플리케이션 시작하기
 categories: WebApplication
 tag: [Android, 폴더구조, 애필리케이션 구조]
+toc: true
 ---
 
 대학교시절 C, C++, Java를 했지만 그렇게 흥미를 못느끼던 어느날 스마트폰이란것이 등장했다.
