--- a/_posts/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
+++ b/_posts/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
@@ -3,9 +3,10 @@ layout: single
 title: Java 웹 애플리케이션 아키텍쳐 
 categories: WebApplication 
 tag: [Architecture]
+toc: true
 ---
 
-<img src="/images/javaarchitecture.jpg" width="80%"/>
+<img src="/images/webapplication/javaarchitecture.jpg" width="80%"/>
 
 
 한국에서 오랫동안 널리 그리고 지금도 이용되고 있는 Java Web Application Architecture다. 
