--- a/_posts/2022-05-11-node_웹_애플리케이션_아키텍쳐.md
+++ b/_posts/2022-05-11-node_웹_애플리케이션_아키텍쳐.md
@@ -3,9 +3,10 @@ layout: single
 title: Node.js 웹 애플리케이션 아키텍쳐 
 categories: WebApplication 
 tag: [Architecture]
+toc: true
 ---
 
-<img src="/images/nodearchitecture.jpg" width="80%"/>
+<img src="/images/webapplication/nodearchitecture.jpg" width="80%"/>
 
 
 근 몇년간 가장 핫하고 지금도 증가하고있는 추세의 아키텍쳐이다. 프론트엔드와 백엔드단을 분리하여 사용자와 비즈니스 로직을 완벽히 분리하여
