--- a/_posts/2024-02-07-RPA_과제설계.md
+++ b/_posts/2024-02-07-RPA_과제설계.md
@@ -3,6 +3,7 @@ layout: single
 title: RPA 과제설계
 categories: RPA
 tag: [RPA]
+toc: true
 ---
 
 > 진행중인 프로젝트를 예로 들고 싶으나 혹시 문제가 될까 가상으로 만든 예시 입니다. 업무 진행의 전문성이 다소 부족 할 수 있음을 감안 부탁드립니다.
