it team management

--- a/_posts/2024-02-14-RPA_과제분류.md
+++ b/_posts/2024-02-14-RPA_과제분류.md
@@ -4,6 +4,9 @@ title: RPA 과제분류
 categories: RPA
 tag: [RPA]
 toc: true
+#author_profile: false
+#sidebar:
+#    nav: "docs"
 ---
 
 회사에서 RPA를 도입하면 필연적으로 많은 부서에서 본인들 수기업무에 대한 자동화 요청을 한다.  
