add two contents

--- a/_posts/2024-02-21-etc_생각보다개발을좋아할지도.md
+++ b/_posts/2024-02-21-etc_생각보다개발을좋아할지도.md
@@ -9,7 +9,7 @@ toc: true
 #    nav: "docs"
 ---
 
-> 너무 잡설이 긴데 내가 어쩌다 FP를 공부하게 되었지를 생각해보다 보니 먼가 감격에 겨워 구구절절 작성한거니 나이먹어 여성호르몬이 늘어나고 있구나 라고 생각해주시면 감사하겠습니다.
+> 너무 잡설이 긴데 내가 어쩌다 FP를 공부하게 되었지를 생각해보다 보니 먼가 감상에 젖어 구구절절 작성한거니 나이먹어 여성호르몬이 늘어나고 있구나 라고 생각해주시면 감사하겠습니다.
 
 si, 솔루션 회사를 다니며 돌아보니 10년간 프로젝트를 30개 넘게 했다. 
 일년에 3개정도씩인데 중간에 2~3년짜리 프로젝트도 있었으니 도대체 일년에 몇개를 했단 말인가.  
