--- a/_posts/2024-02-23-SM_알쓸운영_웹어플리케이션이뻗어요.md
+++ b/_posts/2024-02-23-SM_알쓸운영_웹어플리케이션이뻗어요.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 알쓸운영 2탄 - 웹어플리케이션이뻗어요
+title: 알쓸운영 2탄 - 웹어플리케이션이뻗어요.
 categories: SM
 tag: [sm, web, 시스템멈춤]
 toc: true
@@ -9,4 +9,89 @@ toc: true
 #    nav: "docs"
 ---
 
-필자는 정말 운이 좋다. 남들이 정말 한가한 일이라고 해도 나한테만 주어지면 일이 마구 쏟아진다. 해당현상은 잠깐 맡았던 일중에 발생한 아주 재밌는 현상이었다.
+운이 정말 좋은편이다. 문제는 일에 한정해서만 운이 좋다는것이다. 남들이 정말 한가한 일이라고 해도 나한테만 주어지면 일이 마구 쏟아진다. 해당현상은 잠깐 맡았던 일중에 발생한 아주 재밌는? 화나는 현상이었다.
+
+대부분의 예전 시스템들을 보면 spring+mybatis 조합인데 프로시저를 많이 쓰는 회사들이 있다. 몸 담았던 회사들이 대부분 plsql, procedure로 작성되어 있는데 
+이번 시스템이 뻗어버리는 현상은 어떤 개발자가 텍스트를 초성으로 변환하는 함수을 사용했는데 해당 함수가 문자열을 입력하면 정상작동하나 초성만 들어가있는 텍스트를 넣는경우
+행이 걸려버리는 현상이 발생하면서 서비스 전체가 뻗어버리는 어마어마한 문제가 발생하였다.
+
+적용한 개발자만의 문제라기 보다는 여러가지 테스트를 안해본 모두의 잘못이 아닐까 싶다.
+
+
+[//]: # (```)
+
+[//]: # (CREATE DEFINER=`스키마`@`%` FUNCTION `fn_choSearch`&#40;`str` varchar&#40;20&#41;&#41; RETURNS varchar&#40;20&#41; CHARSET utf8 )
+
+[//]: # ()
+[//]: # (BEGIN )
+
+[//]: # (     declare returnStr varchar&#40;100&#41;; )
+
+[//]: # (     declare cnt int; )
+
+[//]: # (     declare i int; )
+
+[//]: # (     declare j int; )
+
+[//]: # (     declare tmpStr varchar&#40;10&#41;; )
+
+[//]: # ()
+[//]: # (     if str is null then )
+
+[//]: # (         return ''; )
+
+[//]: # (     end if; )
+
+[//]: # ()
+[//]: # (   set str = replace&#40;str, ' ', ''&#41;;)
+
+[//]: # (     set cnt = length&#40;str&#41;/3; )
+
+[//]: # (     set i = 1; )
+
+[//]: # (     set j = 1; )
+
+[//]: # (     while i <=cnt DO )
+
+[//]: # (           set tmpStr = substring&#40;str,i,j&#41;; )
+
+[//]: # (           set returnStr = concat&#40;ifnull&#40;returnStr,''&#41;, )
+
+[//]: # ()
+[//]: # (            case when tmpStr rlike '^&#40;ㄱ|ㄲ&#41;' OR &#40; tmpStr >= '가' AND tmpStr < '나' &#41; then 'ㄱ' )
+
+[//]: # (                 when tmpStr rlike '^ㄴ' OR &#40; tmpStr >= '나' AND tmpStr < '다' &#41; then 'ㄴ' )
+
+[//]: # (                 when tmpStr rlike '^&#40;ㄷ|ㄸ&#41;' OR &#40; tmpStr >= '다' AND tmpStr < '라' &#41; then 'ㄷ' )
+
+[//]: # (                 when tmpStr rlike '^ㄹ' OR &#40; tmpStr >= '라' AND tmpStr < '마' &#41; then 'ㄹ' )
+
+[//]: # (                 when tmpStr rlike '^ㅁ' OR &#40; tmpStr >= '마' AND tmpStr < '바' &#41; then 'ㅁ' )
+
+[//]: # (                 when tmpStr rlike '^ㅂ' OR &#40; tmpStr >= '바' AND tmpStr < '사' &#41; then 'ㅂ' )
+
+[//]: # (                 when tmpStr rlike '^&#40;ㅅ|ㅆ&#41;' OR &#40; tmpStr >= '사' AND tmpStr < '아' &#41; then 'ㅅ' )
+
+[//]: # (                 when tmpStr rlike '^ㅇ' OR &#40; tmpStr >= '아' AND tmpStr < '자' &#41; then 'ㅇ' )
+
+[//]: # (                 when tmpStr rlike '^&#40;ㅈ|ㅉ&#41;' OR &#40; tmpStr >= '자' AND tmpStr < '차' &#41; then 'ㅈ' )
+
+[//]: # (                 when tmpStr rlike '^ㅊ' OR &#40; tmpStr >= '차' AND tmpStr < '카' &#41; then 'ㅊ' )
+
+[//]: # (                 when tmpStr rlike '^ㅋ' OR &#40; tmpStr >= '카' AND tmpStr < '타' &#41; then 'ㅋ' )
+
+[//]: # (                 when tmpStr rlike '^ㅌ' OR &#40; tmpStr >= '타' AND tmpStr < '파' &#41; then 'ㅌ' )
+
+[//]: # (                 when tmpStr rlike '^ㅍ' OR &#40; tmpStr >= '파' AND tmpStr < '하' &#41; then 'ㅍ' )
+
+[//]: # (            else 'ㅎ' end&#41;; )
+
+[//]: # (           set i=i+1; )
+
+[//]: # (     end while; )
+
+[//]: # (  RETURN returnStr; )
+
+[//]: # (END;)
+
+[//]: # (```)
