--- a/_posts/2024-02-28-code_js선언형프로그래밍.md
+++ b/_posts/2024-02-28-code_js선언형프로그래밍.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Javascript 선언형프로그래밍 
+title: Javascript 선언형프로그래밍 - 유지보수성이 좋은 선언형 프로그래밍을 하기 위해서는?
 categories: code
 tag: [함수형, FP, 패러다임, Javascript]
 toc: true
@@ -10,13 +10,34 @@ toc: true
 ---
 
 어느순간부터 선언적이지 않은 코드는 잘못되었다는 분위기가 팽배해졌다. 명령형은 틀리고 선언형 프로그래밍이 맞다라는 말은 개인적으로 동의할 수 없으나 이 얘기는 나중에 써보기로 하고  
-오늘은 우리가 작성하는 선언형 프로그래밍에 대해 개인적인 의견을 써볼려고 한다.
+오늘은 우리가 javascript를 이용해 작성하는 선언형 프로그래밍에 대해 개인적인 의견을 써볼려고 한다.
 
-부제는 "Javascript 선언형 프로그래밍 정말 선언적이고 유지보수성 괜찮은가요?" 이다. 
+부제는 **"Javascript에서 유지보수성이 좋은 선언형 프로그래밍을 하기 위해서는?"** 이다. 
 
 Javascript는 ES6부터 람다 표현식을 쓸수 있으면서 이를 도와주는 여러 도구들이 추가되었는데 대표적으로 map, filter, reduce 등이다.  
 아래 간단한 예제를 보자.
 
+```javascript
+    [1,2,3].map(a=>a+1);
+```
+## 정말 선언적인가?
+객체 뒤에 배열 메소드를 붙여 사용하는게 선언적이라는 느낌이 들지 않았다.
+행동의 목적이 우선시 되고 그다음 속성값이 나오는게 훨씬더 선언적이라고 생각했다.
+
+[선언을 도와주는 함수들](../code_js선언형프로그래밍(2))과 같이 함수로 만들어 보자.
+
+```javascript
+    map(a=>a+1, [1,2,3]);       // map을 뱉어낼건데 1을 더해서 줄거야. 대상은 [1,2,3] 이야
+
+    filter(a=>a%2==0, [1,2,3]);    // filter를 할거야. 2로 나머지 한값이 0인것만 줄거야. 대상은 [1,2,3] 이야
+
+    const add = (a, b) => a + b;
+    reduce(add, [1,2,3]);           // reduce를 할거야. 값들을 더하는 함수를 이용할거고 대상은 [1,2,3] 이야
+```
+목적에 대해 선언을 하고 과정에 대해 후술 하고 있다.
+조금은 더 선언적이라고 볼수 있을까?
+
+조금더 길게 작성을 해보자. 아래는 내장 함수들을 이용해서 map().filter().reduce()가 한번에 사용되는 예제이다.
 ```javascript
 // map().filter().reduce()가 한번에 사용되는 예제
 const numbers = Array.from({ length: 10 }, (_, index) => index + 1); // 1부터 10까지의 배열 생성
@@ -30,36 +51,35 @@ const result = numbers
 
 console.log(result); // 결과 출력
 ```
+절차적으로 잘 해석되나 result 부분이 무언가 어색하다. result가 number를 가지고 무언가 행위를 하는모양이지만 "덜 선언적"인라 한눈에 들어 오지 않는다.
 
-## 정말 선언적인가?
+해당 예제를 [선언을 도와주는 함수들](../code_js선언형프로그래밍(2))를 이용하여 다시 만들어 보자.
+```javascript
+const numbers = Array.from({ length: 10 }, (_, index) => index + 1); // 1부터 10까지의 배열 생성
+const add = (acc, curr) => acc + curr;
+const result = reduce(
+                    add
+                    , filter(num => num % 2 === 0
+                        , map(num=>num+10
+                            , numbers
+                        )
+                    )
+                );
 
-선언적이란 말에 매몰되어 있는지 모르겠지만 객체 뒤에 배열 메소드를 붙여 사용하는게 선언적이라는 느낌이 들지 않았다. 
-행동의 목적이 우선시 되고 그다음 속성값이 나오는게 훨씬더 선언적이라고 생각했다.
-> [1,2,3].map(a=>a+1);  // 1,2,3을 map을 만드는데 1을 더해라
-> map(a=>a+1, [1,2,3]); // map을 뱉어낼건데 1을 더해서 줄거야. 대상은 [1,2,3] 이야
+console.log(result);
+```
+## 유지보수성이 좋은가?
+조금은 더 선언적으로 되지 않았는가? 그런데 코드를 만들고 유지보수를 하다보면 실수이건 프로세스 변경이건 "유지보수"로 인해 코드를 변경하는 일이 있다고 생각해보자.
+이때 문제가 발생하는데 아래와 같이 코드를 보는 시선의 흐름이 위에서 아래로 내려가다 함수의 중첩으로 인해 이해하기 위해서는 밑에서 위로 올라가게 된다.   
+<img src="/images/code/img_2.png" alt="">  
 
-위 예제를 보았을때 선언적이고 목적지향적인건 전자보다 후자가 훨씬더 가깝다고 생각한다. 이러한 개념ß이 없을까 찾아보던중 lisp이라는 '함수형언어' 발견했다.  
-> (+ 1 2) // lisp은 더할때도 이렇게 한다.
+이렇게 되면 **"유지보수성이 떨어진다."**
 
-다음 포스트에선 조금더 선언적으로 코드를 짜는 법에 대해 알아보자.
+> 아니? 위에서 말했을때는 목적이 앞으로 드러나니 더 선언적이라고 좋다고 하지 않았던가?  
 
+**선언적인것도 중요하나 유지보수성이 떨어진다면 무슨의미가 있을까?**  
+result 부분을 함수로 분리하면 해결되지 않을까? 순수함수, 함수형 프로그래밍에서 계산만 하는 함수로 분리하니 그 함수들은 변경 할일이 거이 없지 않은가? 라고 자기 위안을 삼았지만
+몇번을 곱씹어 봐도 좋은 코드라는 느낌이 들지 않았다. 내가 원하는 것은 "유지보수성이 좋기 위해서 절차적인 부분은 순차적이되 선언적인 코드"였다.
 
-
-
-[//]: # (람다식으로 구성되어 있고 함수로 분리 하지 않았지만 javascript 내장 함수를 사용하여 선언적으로 구성한 코드이다.  )
-
-[//]: # (이러한 코드 구성이 이제는 흔해졌고 **'순수함수'**로 분리->작성 한다면 깔끔해지겠지만 아무리 생각 해도 마음에 들지 않았다.)
-[//]: # (유지보수성이 좋으려면 여러가지가 중요하겠지만 필자는 잘 읽히는게 가장 중요하다고 생각한다. 사람은 일반적으로 절차적으로 생각한다. )
-
-[//]: # (코드를 보면 당연히 위에서 부터 보기 시작한다. 문제는 선언적이라고 되어 있는 코드의 서순부터 시작된다. )
-
-[//]: # (위에서부터 순차적으로 내려오다 선언적인 코드를 만나면 이해하기 위해 뒤에서 부터 읽어야 한다.  )
-
-[//]: # ()
-[//]: # (<img src="/images/code/img.png" alt="">  )
-
-[//]: # (위 예제는 중첩이 적어 다행이지만 map&#40;&#41;.filter&#40;&#41;.reduce&#40;&#41;이 중첩되서 사용된다고 생각해보자. 목적은 reduce인게 맞지만  )
-
-[//]: # (함수로 분리하면 문단자체는 읽기 쉬워지나 함수로 들어가서 보게 되면 결국엔 다시 시선의 방향이 뒤집혀야 한다.  )
-
-[//]: # (개인적으론 한글책을 읽고 있는데 중간중간 영어지문이 섞여 있는 책을 읽는 느낌이었다.)
+이것에 대해 한참동안을 고민에 빠졌었다. 여러가지 고민을 하던중 우연히 어떤 좋은 강좌를 통해 표현력을 높여주는 도구를 추가로 만나볼 수 있었다.
+[가독성을 높여주는 함수들](../code_js선언형프로그래밍(3))
