--- a/_posts/2024-02-29-code_js선언형프로그래밍(2).md
+++ b/_posts/2024-02-29-code_js선언형프로그래밍(2).md
@@ -9,15 +9,63 @@ toc: true
 #    nav: "docs"
 ---
 
-## 1. map
+## 과정을 만들어 주는 도구들
+### 1. map
 ```
-[1,2,3] -> f(x) { return x+1;} -> [2,3,4] 
+[1,2,3] -> f(x) { return x+1;} -> [2,3,4]
 ``` 
-## 2. filter
+```javascript
+const map = (f, iter) => {
+    let res = [];
+    for (const a of iter) {
+      res.push(f(a));
+    }
+    return res;
+  };
+
+```
+### 2. filter
 ```
 [1,2,3] -> f(x) { return x%2;} -> [2] 
 ```
-## 3. reduce
+```javascript
+const filter = (f, iter) => {
+    let res = [];
+    for (const a of iter) {
+        if (f(a)) res.push(a);
+    }
+    return res;
+};
+```
+
+## 결과를 만들어 주는 도구들
+### 1. reduce
 ```
 [1,2,3] -> f(x,y) { return x+y;} -> 6 
+```
+```javascript
+const reduce = (f, acc, iter) => {
+    if (!iter) {
+        iter = acc[Symbol.iterator]();
+        acc = iter.next().value;
+    }
+    for (const a of iter) {
+        acc = f(acc, a);
+    }
+    return acc;
+};
+```
+### 2. take
+```
+[1,2,3] -> f(2) { return [1,2];} -> [1,2] 
+```
+```javascript
+const take = (l, iter) => {
+    let res = [];
+    for (const a of iter) {
+      res.push(a);
+      if (res.length == l) return res;
+    }
+    return res;
+  };
 ```
