--- a/_posts/2024-02-28-code_js선언형프로그래밍.md
+++ b/_posts/2024-02-28-code_js선언형프로그래밍.md
@@ -58,13 +58,12 @@ console.log(result); // 결과 출력
 const numbers = Array.from({ length: 10 }, (_, index) => index + 1); // 1부터 10까지의 배열 생성
 const add = (acc, curr) => acc + curr;
 const result = reduce(
-                    add
-                    , filter(num => num % 2 === 0
-                        , map(num=>num+10
-                            , numbers
+                    add, filter(num => num % 2 === 0
+                            , map(num=>num+10
+                                , numbers
+                            )
                         )
-                    )
-                );
+                    );
 
 console.log(result);
 ```
@@ -79,7 +78,11 @@ console.log(result);
 
 **선언적인것도 중요하나 유지보수성이 떨어진다면 무슨의미가 있을까?**  
 result 부분을 함수로 분리하면 해결되지 않을까? 순수함수, 함수형 프로그래밍에서 계산만 하는 함수로 분리하니 그 함수들은 변경 할일이 거이 없지 않은가? 라고 자기 위안을 삼았지만
-몇번을 곱씹어 봐도 좋은 코드라는 느낌이 들지 않았다. 내가 원하는 것은 "유지보수성이 좋기 위해서 절차적인 부분은 순차적이되 선언적인 코드"였다.
+몇번을 곱씹어 봐도 좋은 코드라는 느낌이 들지 않았다. 내가 원하는 것은 풀어서 쓰면 아래와 같은 것이었다. 
+
+> "유지보수성이 좋기 위해 절차적인 부분은 순차적이되 선언적인 코드"
 
 이것에 대해 한참동안을 고민에 빠졌었다. 여러가지 고민을 하던중 우연히 어떤 좋은 강좌를 통해 표현력을 높여주는 도구를 추가로 만나볼 수 있었다.
 [가독성을 높여주는 함수들](../code_js선언형프로그래밍(3))
+
+* 함수형에 관심이 있고 javascript를 코드를 데이터처럼 다뤄보고 싶다라는 생각이 들면 유인동님의 강좌를 적극 추천한다. 
