--- a/_posts/2024-02-29-code_js선언형프로그래밍(2).md
+++ b/_posts/2024-02-29-code_js선언형프로그래밍(2).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Javascript 선언형프로그래밍 - 조금더 선언적이게 도와주는 도구 만들기
+title: 조금더 선언적이게 도와주는 도구 만들기
 categories: code
 tag: [함수형, FP, 패러다임, Javascript]
 toc: true
@@ -23,6 +23,8 @@ const map = (f, iter) => {
     return res;
   };
 
+map(a=>a*2, [1,2,3]);
+// 결과값 : [2,4,6]
 ```
 ### 2. filter
 ```
@@ -36,6 +38,9 @@ const filter = (f, iter) => {
     }
     return res;
 };
+
+filter(a=>a%2===0, [1,2,3,4,5]);
+// 결과값 : [2,4]
 ```
 
 ## 결과를 만들어 주는 도구들
@@ -54,6 +59,13 @@ const reduce = (f, acc, iter) => {
     }
     return acc;
 };
+
+const add = (acc, curr) => acc + curr;
+
+reduce(add, [1,2,3,4,5]);
+// 결과값 : 15 
+reduce(add, 2, [1,2,3,4,5]);
+// 결과값 : 17
 ```
 ### 2. take
 ```
@@ -68,4 +80,7 @@ const take = (l, iter) => {
     }
     return res;
   };
+
+take(2,[1,2,3]);
+// 결과값 : [1,2]
 ```
