--- a/_posts/2024-03-03-code_js선언형프로그래밍(3).md
+++ b/_posts/2024-03-03-code_js선언형프로그래밍(3).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Javascript 선언형프로그래밍 - 표현력을 높여주는 도구들
+title: 표현력을 높여주는 도구들
 categories: code
 tag: [함수형, FP, 패러다임, Javascript]
 toc: true
@@ -23,7 +23,11 @@ go(
 ``` 
 ```javascript
 const go = (...args) => reduce((a, f) => f(a), args);
-
+go(0,
+    a=>a+1,
+    a=>a+10,
+    a=>a+100);
+// 결과값 : 111
 ```
 
 ### 2. pipe
@@ -38,13 +42,39 @@ const f = pipe(
 ```
 ```javascript
 const pipe = (f, ...fs) => (...as) => go(f(...as), ...fs);
+
+const f = pipe(
+    a => a + 1,
+    a => a + 10,
+    a => a + 100
+); 
+f(1000);
+// 결과값 : 1111
 ```
 
 ### 3. curry
+함수를 값으로 다루면서 내가 원하는 시점에 평가
 ```
 f(a, b, c) -> f(a)(b)(c)
 ```
 ```javascript
 const curry = f =>
   (a, ..._) => _.length ? f(a, ..._) : (..._) => f(a, ..._);
+
+const add = (acc, curr) => acc + curr;
+
+curry(add)(1)(2);
+// 결과값 : 3
+
+let fadd = curry(add);
+let addedResult = fadd(3)(2);
+
+const mult = curry((a,b) => a * b);
+console.log(mult(1)(2));
+
+const mult2 = mult(2);
+console.log(mult(4));
+
 ```
+
+위 함수들을 이용해 [다음포스트](2024-03-05-code_js선언형프로그래밍(4).md)에서 표현력을 더 높여 코드를 작성해보도록 하자.
