--- a/_posts/2024-03-05-code_js선언형프로그래밍(4).md
+++ b/_posts/2024-03-05-code_js선언형프로그래밍(4).md
@@ -75,3 +75,7 @@ go(
 중복되는 파라미터들을 모두 제거 할 수 있게 되었다. wow!
 
 이렇게 함수를 값으로 다루는게 '함수형 프로그래밍'이다.
+
+> 새발의 피만큼의 함수형 프로그래밍에 대한 설명입니다. 
+첫 시작은 javascript es6 표현식을 이용하면 선언적이라고 하는데 
+개인적으로 생각했을때 선언적이지도 않아 함수로 만드니 유지보수성이 떨어져 찾다 알게 된게 함수형 프로그래밍입니다.
