--- a/_posts/2024-02-22-SM_알쓸운영_POS가느려져요.md
+++ b/_posts/2024-02-22-SM_알쓸운영_POS가느려져요.md
@@ -18,4 +18,4 @@ toc: true
 **설치되어 있는 백신이 문제였다.** v3 lite 같은 백신이었는데 포스에서 로그를 남기기위해 txt file에 write하는데 백신에서 해당파일이 변경될때마다
 파일을 읽어서 확인을 했다. 그러다 보니 내용이 길어지면 길어질 수록 읽는 양이 많아졌고 포스는 점점 느려졌던 것이었다.  
 
-문제해결을 하다보면 소프트웨어 외에 찾을수 있는 경우가 많으니 넓은 시야를 가지고 접근해보시길 바란다.
+문제해결을 하다보면 소프트웨어~~~~ 외에 찾을수 있는 경우가 많으니 넓은 시야를 가지고 접근해보시길 바란다.
