함수형컨텐츠수정

--- a/_posts/2024-02-28-code_js선언형프로그래밍.md
+++ b/_posts/2024-02-28-code_js선언형프로그래밍.md
@@ -51,7 +51,14 @@ const result = numbers
 
 console.log(result); // 결과 출력
 ```
-절차적으로 잘 해석되나 result 부분이 무언가 어색하다. result가 number를 가지고 무언가 행위를 하는모양이지만 "덜 선언적"인라 한눈에 들어 오지 않는다.
+절차적으로 잘 해석되나 result 부분이 무언가 어색하다. result가 number를 가지고 무언가 행위를 하는모양이지만 "덜 선언적"인라 한눈에 들어 오지 않는다.  
+문제는 거기서 그치지 않는다. **Iterator에 대한 지원이 되지 않는다.** 그래서 Javascript에서는 전개연산자를 사용하여 map, filter, reduce를 사용하여야 한다.
+ 
+```javascript
+// 전개연산자를 이용한 예제
+document.querySelectorAll('div').map(el=>el); // 이렇게 사용하면 undefined!
+[...document.querySelectorAll('div')].map(el=>el); // 이렇게 사용해야 한다.
+```
 
 해당 예제를 [선언을 도와주는 함수들](../code_js선언형프로그래밍(2))를 이용하여 다시 만들어 보자.
 ```javascript
@@ -68,21 +75,25 @@ const result = reduce(
 console.log(result);
 ```
 ## 유지보수성이 좋은가?
-조금은 더 선언적으로 되지 않았는가? 그런데 코드를 만들고 유지보수를 하다보면 실수이건 프로세스 변경이건 "유지보수"로 인해 코드를 변경하는 일이 있다고 생각해보자.
-이때 문제가 발생하는데 아래와 같이 코드를 보는 시선의 흐름이 위에서 아래로 내려가다 함수의 중첩으로 인해 이해하기 위해서는 밑에서 위로 올라가게 된다.   
-<img src="/images/code/img_2.png" alt="">  
+조금은 더 선언적으로 되지 않았는가? 그리고 Iterator도 지원가능해졌다.  
+그런데 코드를 만들고 유지보수를 하다보면 실수이건 프로세스 변경이건 코드를 변경하는 일이 반드시 발생하게 된다.
+이때 문제가 발생하는데 아래와 같이 코드를 보는 시선의 흐름이 위에서 아래로 내려가다 함수는 밑에서 위로 올라가게 된다.
+함수의 사용순서가 반대로 되는것이다. 필자는 명령형 프로그램을 오래해서인지 모르겠지만 이게 너무나 불편하게 느껴졌다.
 
-이렇게 되면 **"유지보수성이 떨어진다."**
-
-> 아니? 위에서 말했을때는 목적이 앞으로 드러나니 더 선언적이라고 좋다고 하지 않았던가?  
-
-**선언적인것도 중요하나 유지보수성이 떨어진다면 무슨의미가 있을까?**  
+이런식의 코드 흐름을 보면서 유지보수성이 좋다는 느낌이 들지는 않는다.
 result 부분을 함수로 분리하면 해결되지 않을까? 순수함수, 함수형 프로그래밍에서 계산만 하는 함수로 분리하니 그 함수들은 변경 할일이 거이 없지 않은가? 라고 자기 위안을 삼았지만
-몇번을 곱씹어 봐도 좋은 코드라는 느낌이 들지 않았다. 내가 원하는 것은 풀어서 쓰면 아래와 같은 것이었다. 
+몇번을 곱씹어 봐도 좋은 코드라는 느낌이 들지 않았다. 
 
-> "유지보수성이 좋기 위해 절차적인 부분은 순차적이되 선언적인 코드"
+이것에 대해 한참동안을 고민에 빠졌었다. 여러가지 고민을 하던중 우연히 어떤 좋은 강좌를 통해 표현력을 높여주는 도구를 추가로 만나볼 수 있었다.  
+함수형언어에서 사용되는 파이프와 같은 도구들이다.
 
-이것에 대해 한참동안을 고민에 빠졌었다. 여러가지 고민을 하던중 우연히 어떤 좋은 강좌를 통해 표현력을 높여주는 도구를 추가로 만나볼 수 있었다.
 [가독성을 높여주는 함수들](../code_js선언형프로그래밍(3))
 
-* 함수형에 관심이 있고 javascript를 코드를 데이터처럼 다뤄보고 싶다라는 생각이 들면 유인동님의 강좌를 적극 추천한다. 
+
+## 번외
+> Javascript TC39(ESCMScript 표준을 담당하는 위원회)에서는 아래와 같은 연산자가 표준에 포함시키자고 제안되었으나 몇년전일이고 통과될것같아 보이진 않는다.
+<img src="/images/code/img_3.png" alt="">
+
+> 함수형에 관심이 있고 javascript를 코드를 데이터처럼 다뤄보고 싶다라는 생각이 들면 유인동님의 강좌를 적극 추천한다.
+
+
