--- a/_posts/2024-03-05-code_js선언형프로그래밍(4).md
+++ b/_posts/2024-03-05-code_js선언형프로그래밍(4).md
@@ -64,6 +64,17 @@ const reduce = curry((f, acc, iter) => {
 ```javascript
 const numbers = Array.from({ length: 10 }, (_, index) => index + 1); // 1부터 10까지의 배열 생성
 const add = (acc, curr) => acc + curr;
+
+// as-is)
+go(
+    numbers,
+    numbers => filter(p => p % 2 ===0, numbers),
+    numbers => map(p => p + 1, numbers),
+    numbers => reduce(add, numbers),
+    console.log
+);
+
+// to-be)
 go(
     numbers,
     filter(p => p % 2 ===0),
@@ -72,8 +83,7 @@ go(
     console.log
 );
 ```
-중복되는 파라미터들을 모두 제거 할 수 있게 되었다. wow!
-
+함수의 인자값들을 삭제해도 정상작동한다.
 이렇게 함수를 값으로 다루는게 '함수형 프로그래밍'이다.
 
 > 새발의 피만큼의 함수형 프로그래밍에 대한 설명입니다. 
