--- a/_posts/2024-02-22-SM_알쓸운영_POS가느려져요.md
+++ b/_posts/2024-02-22-SM_알쓸운영_POS가느려져요.md
@@ -3,7 +3,7 @@ layout: single
 title: 알쓸운영 1탄 - PC프로그램(POS)이 느려져요.
 categories: SM
 tag: [sm, pos, 성능저하]
-toc: true
+#toc: true
 #author_profile: false
 #sidebar:
 #    nav: "docs"
