--- a/_posts/2024-03-08-SM_알쓸운영_리눅스CPU부하.md
+++ b/_posts/2024-03-08-SM_알쓸운영_리눅스CPU부하.md
@@ -3,7 +3,7 @@ layout: single
 title: 알쓸운영 3탄 - 리눅스 CPU가 오라클로 인해 부하걸릴때
 categories: SM
 tag: [sm, web, 시스템멈춤, oracle CPU]
-toc: true
+#toc: true
 #author_profile: false
 #sidebar:
 #    nav: "docs"
