오라클 클라우드

--- a/_posts/2024-03-23-cloud_오라클클라우드.md
+++ b/_posts/2024-03-23-cloud_오라클클라우드.md
@@ -46,3 +46,35 @@ toc: true
 ## 2. mysql 데이터베이스 생성
 mysql도 오라클에 먹힌지 오래되서 바로 설정가능할 줄 알았는데 vm ware에 설치를 하는 것말고는 없는것 같다.  
 [그림1]관리자 메인화면 으로 돌아가 **VM 인스턴스 생성**을 진행하자.
+
+간단하게 몇가지만 설정하면 된다.  
+<img src="/images/cloud/img_8.png">  
+변경을 안하면 오라클 리눅스이기에 본인이 익숙한 운영체제를 선택해 바꿔주자. 무료로 쓰기 위해 오라클 클라우드를 선택한거니 무료플랜을 잘 골라야 한다.  
+그런데 오른쪽에 이것은 무엇?  
+<img src="/images/cloud/img_9.png">  
+무료라더니,,,,몇군데 확인해보니 사용량(50gb)이 넘지만 않으면 괜찮다고 하는데 우선 체험해보고 월 청구되는지 보고 업데이트 하겠다.
+
+가능하면 아래와 같이 공개키를 넣어주자. 지금 안하면 나중에 귀찮아 진다.
+<img src="/images/cloud/img_17.png">  
+
+이제 생성!  
+<img src="/images/cloud/img_10.png">
+
+## 3. 원격 접속
+### 1) 실행 중인 인스턴스를 선택  
+<img src="/images/cloud/img_11.png">  
+### 2) 인스턴스 세부정보 화면에서 스크롤 내려 연결된 VNIC 선택  
+<img src="/images/cloud/img_12.png"> 
+### 3) VNIC 항목 선택  
+<img src="/images/cloud/img_13.png"> 
+### 4) Resources -> IPv4 주소 선택 -> 표시된 화면항목의 더보기 클릭 -> 편집 선택
+<img src="/images/cloud/img_14.png">
+### 5) 임시 공용 IP로 선택되어 있는걸 공용 IP 없음으로 변경 -> 업데이트 -> 다시 전용 IP 주소 편집으로 들어와 예약된 공용 IP 선택 -> 아래 항목중 새 예약된 IP 주소 생성 선택 -> 업데이트  
+<img src="/images/cloud/img_15.png">
+### 6) 공용 IP 주소 확인!  
+<img src="/images/cloud/img_16.png">  
+
+> 몇번 문제가 생겨서 cenos로 최종 결정해서 다시 만들었다.
+
+ssh 접속정보는 인스턴스 정보중 아래 내용이다.  
+<img src="/images/cloud/img_18.png">   
