--- a/_posts/diary/2024-02-21-etc_생각보다개발을좋아할지도.md
+++ b/_posts/diary/2024-02-21-etc_생각보다개발을좋아할지도.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: 생각보다 개발을 좋아할지도?
-categories: etc
+categories: diary
 tag: [함수형, FP, 패러다임]
 toc: true
 #author_profile: false
