--- a/_posts/manage/2025-02-10-팀관리_엔지니어링매니저.md
+++ b/_posts/manage/2025-02-10-팀관리_엔지니어링매니저.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 엔지니어링 매니저란 무엇인가, 그리고 내가 그 역할을 맡게 된 이유
+title: 엔지니어링 매니저란 무엇인가, 그리고 내가 그 역할을 자처하게 된 이유
 categories: MANAGE
 tag: [MANAGE]
 toc: true
