--- a/_posts/manage/2025-02-09-팀관리_상태전환비용.md
+++ b/_posts/manage/2025-02-09-팀관리_상태전환비용.md
@@ -10,7 +10,7 @@ toc: true
 ---
 
 ## 배경: 너무 많은 일, 너무 많은 요청
-현재 회사는 정말 많은 일을 처리해야 한다. 그중에서도 나와 우리 팀장님은 회사뿐만 아니라 그룹사 전체에서도 최상위급으로 많은 업무를 수행하고 있다.
+현재 회사는 정말 많은 일을 처리해야 한다. 
 
 그런데, 이처럼 다양한 업무가 쏟아지는 환경에서 업무를 효율적으로 측정하는 것이 직책자의 기본 소양임에도 불구하고, 현재 회사에서는 업무량과 집중도의 측정이 잘 이루어지지 않고 있다.
 
