--- a/_posts/scdf/2025-02-17-SCDF_프로젝트참고자료.md
+++ b/_posts/scdf/2025-02-17-SCDF_프로젝트참고자료.md
@@ -1,3 +1,14 @@
+---
+layout: single
+title: SCDF 프로젝트시 참고했던 자료 정리
+categories: SCDF
+tag: [SCDF]
+toc: true
+#author_profile: false
+#sidebar:
+#    nav: "docs"
+---
+
 # 📌 Spring Cloud Data Flow (SCDF) 관련 문서 및 자료 정리
 
 ## 🚀 환경
@@ -33,8 +44,7 @@
 
 ---
 
-## 📦 참고 GitHub Repository
-### ✅ Spring Cloud Stream Applications
+## 📦 GitHub Repository
 - 📌 **[Spring Cloud Stream Applications](https://github.com/spring-cloud/stream-applications)**
 - 📌 **[SCDF 설치용 Docker Compose](https://github.com/spring-cloud/spring-cloud-dataflow/tree/main/src/docker-compose)**
 - 📌 **[Spring Cloud Stream App Starters](https://github.com/spring-attic/spring-cloud-stream-app-starters)**
