--- a/_posts/code/2025-02-18-code_함수형프로그래밍(일급객체).md
+++ b/_posts/code/2025-02-18-code_함수형프로그래밍(일급객체).md
@@ -21,18 +21,15 @@ toc: true
 즉, 함수가 일급 객체여야만 함수형 프로그래밍이 가능하기에 가장 중요한 성질이라고 생각된다.
 내가 사용하려는 언어가 함수가 일급객체인지 반드시 확인해보도록 하자.
 
-### 📌 객체가 일급인 언어 (객체 지향 언어)
-
-이런 언어들은 객체를 변수처럼 다룰 수 있어.
--	JavaScript (프로토타입 기반 객체 지향)
--	Scala (객체 지향 + 함수형 혼합)
--	Java (클래스를 통한 객체 생성)
--	C# (객체 지향 언어)
-
-### 📌 객체가 일급이 아닌 언어
-- C (구조체 기반, 클래스 개념 없음)
-- Go (객체 지향 X, 구조체 중심)
-- Rust (객체 지향 개념은 있지만 일급 객체로 보긴 어려움)
+>#### 📌 객체가 일급인 언어 (객체 지향 언어)
+>-	JavaScript (프로토타입 기반 객체 지향)
+>-	Scala (객체 지향 + 함수형 혼합)
+>-	Java (클래스를 통한 객체 생성)
+>-	C# (객체 지향 언어)
+>#### 📌 객체가 일급이 아닌 언어
+>- C (구조체 기반, 클래스 개념 없음)
+>- Go (객체 지향 X, 구조체 중심)
+>- Rust (객체 지향 개념은 있지만 일급 객체로 보긴 어려움)
 
 본인이 사용하려는 언어가 일급 객체인것을 확인했다면 일급 객체에 대해 조금더 알아보자.
 모든 예시는 java로 작성할 예정이다.
@@ -56,6 +53,50 @@ public class Main {
     }
 }
 ```
-위 코드중 square라는 변수에 “x를 제곱하는 함수”를 저장 한 것이다. 일반적으로 숫자나 문자열 같은 값을 변수에 저장한 것처럼, 여기서는 함수 자체를 변수에 저장 할 수 있다는 것이 일급객체라는 것이다.
+위 코드중 square라는 변수에 “x를 제곱하는 함수”를 저장 한 것이다. 일반적으로 숫자나 문자열 같은 값을 변수에 저장한 것처럼, 여기서는 함수 자체를 변수에 저장 할 수 있다는 것이 **일급객체**라는 것이다.
 
 다음은 일급객체라는 성질을 가지면 어떤것을 할 수 있는지 알아보자.
+
+---
+### 번외
+위에 java는 함수형프로그래밍을 하기엔 애매한 언어라고 말한바 있는데 위 예시에서도 한가지가 드러난다.
+```java
+int result = square.apply(5);
+```
+여기서 square 는 Java의 Function 인터페이스의 인스턴스 이다.
+즉, square 자체가 객체(Object) 이기 때문에 .apply(5) 라는 메서드 호출이 가능한 것이다.
+
+Java에서 함수 실행이 apply(5) 형태로 동작 하는 이유는 아래와 같다.
+- java는 객체지향 언어이기 때문에, 모든 함수는 기본적으로 객체의 일부이다.
+- Function<T, R> 는 자바의 함수형 인터페이스(Functional Interface) 로, 내부적으로 객체로 동작하는 함수 를 정의한다.
+- square 는 사실 Function 인터페이스를 구현한 객체이다.
+- 따라서 square.apply(5) 는 객체의 메서드를 호출하는 방식으로 실행된다.
+
+✔ 결론: apply(5) 형태는 객체 지향적인 특성 때문에 나타나는 것이다.
+
+만약 순수한 함수형 언어였다면, 함수 실행방식은 더 단순해졌을 것이다.
+
+```javascript
+const square = x => x * x;
+console.log(square(5)); // 25
+```
+
+- JavaScript에서는 함수도 그냥 값이기 때문에, apply(5) 같은 메서드 호출 없이 바로 실행 가능.
+- Java와 다르게, 함수가 객체의 일부가 아니라 독립적인 값 으로 취급됨.
+
+비교해보자면 아래와 같다.
+### 함수형 언어별 함수 실행 방식 비교
+
+
+| 언어         | 함수 실행 방식      | 함수가 객체인가? | 설명 |
+|-------------|----------------|---------------|------|
+| **Java**    | `square.apply(5)` | ✅ (객체 지향 방식) | 함수형 인터페이스 (`Function<T, R>`)를 통해 객체로 다룸 |
+| **JavaScript** | `square(5)` | ❌ (함수는 독립적인 값) | 함수도 변수처럼 다룰 수 있는 1급 객체 |
+| **Python**  | `square(5)` | ❌ (함수는 1급 객체) | 함수가 `def` 또는 `lambda` 로 정의되며 객체가 아님 |
+| **Scala**   | `square(5)` | ✅ (객체이지만, 함수처럼 호출 가능) | 함수도 객체이지만 `apply` 를 숨겨 자연스러운 호출 지원 |
+| **Haskell** | `square 5` | ❌ (순수 함수형 언어) | 모든 함수가 커링(Currying) 적용됨, 괄호 없이 호출 |
+
+### 💡 결론
+- Java는 **객체 지향 기반** 이므로 함수도 결국 객체로 관리되어 `apply(5)` 방식이 필요함.
+- 굳이 jvm 환경에서 함수형을 사용하고 싶다면 Scala를 사용해보자.
+  - 금년도 새로운 언어 학습 목표는 Scala이다.
