--- a/_posts/code/2025-02-20-code_함수형프로그래밍(종합예제3).md
+++ b/_posts/code/2025-02-20-code_함수형프로그래밍(종합예제3).md
@@ -19,8 +19,7 @@ DB 쿼리나 API 호출은 **순수함수** 로 처리하기가 현실적으로 
 왜냐하면 **외부 상태**(DB, 네트워크 등) 와 상호작용하는 자체가 이미 **부작용** 이기 때문이다.
 
 다만, 함수형 스타일을 최대한 유지하기 위해서는 **부작용을 최소한의 영역** 으로만 가두는 방식이 흔히 쓰인다.  
-예를 들어, **데이터를 조회(SELECT, GET)** 해온 후에는  
-그 데이터 자체는 **불변 리스트** 로 만들어 놓고,  
+예를 들어, **데이터를 조회(SELECT, GET)** 해온 후에는  그 데이터 자체는 **불변 리스트** 로 만들어 놓고, 
 실제 로직(필터, 변환)은 **순수함수** 를 활용해 처리한다.
 
 ---
