--- a/_posts/info/2025-02-16-info_그시절시스템(Java).md
+++ b/_posts/info/2025-02-16-info_그시절시스템(Java).md
@@ -28,14 +28,14 @@ toc: true
 
 과거의 기업 시스템에서 백엔드는 다음과 같은 역할을 수행했다.
 1.	PLSQL과 뷰(View) 사이의 데이터 전달자
-•	클라이언트(View)에서 데이터를 요청하면, 백엔드는 HTTP 요청을 MyBatis 파라미터로 변환하여 DB에 전달.
-•	결과적으로 백엔드는 복잡한 비즈니스 로직을 수행하는 것이 아니라, 데이터를 전달하고 변환하는 역할이 주를 이룸.
+      -	클라이언트(View)에서 데이터를 요청하면, 백엔드는 HTTP 요청을 MyBatis 파라미터로 변환하여 DB에 전달.
+      - 결과적으로 백엔드는 복잡한 비즈니스 로직을 수행하는 것이 아니라, 데이터를 전달하고 변환하는 역할이 주를 이룸.
 2.	공통 기능 처리
-•	데이터 조회만 하는 것이 아니라, 공통적으로 필요한 인증, 권한 검사, 예외 처리, 로깅 등의 기능을 담당.
-•	당시 시스템에서는 이런 기능을 공통 모듈로 개발하여 여러 서비스에서 재사용하는 경우가 많았음.
+      - 데이터 조회만 하는 것이 아니라, 공통적으로 필요한 인증, 권한 검사, 예외 처리, 로깅 등의 기능을 담당.
+      - 당시 시스템에서는 이런 기능을 공통 모듈로 개발하여 여러 서비스에서 재사용하는 경우가 많았음.
 3.	뷰와 백엔드의 협업 방식
-•	프론트엔드(뷰)에서 HTTP 요청을 보내면, 백엔드는 이를 받아 MyBatis 파라미터로 변환 후 PLSQL을 실행.
-•	데이터 가공이 필요한 경우, 백엔드에서 가공하는 것이 아니라 PLSQL에서 직접 가공하여 반환하는 방식이 일반적이었음.
+      - 프론트엔드(뷰)에서 HTTP 요청을 보내면, 백엔드는 이를 받아 MyBatis 파라미터로 변환 후 PLSQL을 실행.
+      - 데이터 가공이 필요한 경우, 백엔드에서 가공하는 것이 아니라 PLSQL에서 직접 가공하여 반환하는 방식이 일반적이었음.
 
 --- 
 
