20250223 new posting, 구조 변경

--- a/_posts/WebApplication/2022-04-16-어플리케이션_시작하기.md
+++ b/_posts/WebApplication/2022-04-16-어플리케이션_시작하기.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 애플리케이션 시작하기
+title: 🌐️애플리케이션 시작하기
 categories: WebApplication
 tag: [Android, 폴더구조, 애필리케이션 구조]
 toc: true
