--- a/_posts/WebApplication/2022-04-16-웹_애플리케이션_시작하기전.md
+++ b/_posts/WebApplication/2022-04-16-웹_애플리케이션_시작하기전.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 웹 어플리케이션 시작하기전
+title: 🌐️웹 어플리케이션 시작하기전
 categories: WebApplication
 tag: [Web Application Keyword]
 toc: true
@@ -27,4 +27,4 @@ toc: true
 
 `클라우드(AWS, AZURE), DNS 등 `
 
-### 알아야 할게 너~~무 많다
+### 알아야 할게 너무 많다
