--- a/_posts/WebApplication/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
+++ b/_posts/WebApplication/2022-04-17-Java_웹_애플리케이션_아키텍쳐.md
@@ -1,6 +1,6 @@
 ---
 layout: single 
-title: Java 웹 애플리케이션 아키텍쳐 
+title: 🌐️Java 웹 애플리케이션 아키텍쳐 
 categories: WebApplication 
 tag: [Architecture]
 toc: true
