--- a/_posts/code/2024-02-28-code_js선언형프로그래밍.md
+++ b/_posts/code/2024-02-28-code_js선언형프로그래밍.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Javascript 선언형프로그래밍 - 유지보수성이 좋은 선언형 프로그래밍을 하기 위해서는?
+title: 🧑‍💻Javascript 선언형프로그래밍 - 유지보수성이 좋은 선언형 프로그래밍을 하기 위해서는?
 categories: code
 tag: [함수형, FP, 패러다임, Javascript]
 toc: true
