--- a/_posts/code/2024-02-29-code_js선언형프로그래밍(2).md
+++ b/_posts/code/2024-02-29-code_js선언형프로그래밍(2).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 조금더 선언적이게 도와주는 도구 만들기
+title: 🧑‍💻조금더 선언적이게 도와주는 도구 만들기
 categories: code
 tag: [함수형, FP, 패러다임, Javascript]
 toc: true
