--- a/_posts/info/2025-02-16-info_그시절시스템(Java).md
+++ b/_posts/info/2025-02-16-info_그시절시스템(Java).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 201x년도 시스템 - 백엔드  
+title: 🧐201x년도 시스템 - 백엔드  
 categories: info
 tag: [그때그시절]
 toc: true
@@ -19,7 +19,7 @@ toc: true
 필자의 첫 커리어는 안드로이드였고, Java와 함께 eGov 및 기타 프레임워크도 사용했지만, 백엔드보다 JavaScript와 SQL에 더 많은 비중을 두었다.
 이유는 앞선 글에서 설명했던 것처럼, 당시 비즈니스 프로세스의 구현은 대부분 PLSQL 중심으로 이루어졌기 때문이다.
 
-> [이전 : 201x년도 시스템 - PLSQL](../그시절시스템(PLSQL))
+> [이전 : 201x년도 시스템 - PLSQL](../info_그시절시스템(PLSQL))
 
 백엔드는 단순한 비즈니스 로직을 구현하는 곳이 아니었다.
 그보다는 뷰(View)와 PLSQL 사이의 연결 다리 역할을 하는 것이 일반적이었다.
