--- a/_posts/manage/2025-02-09-팀관리_상태전환비용.md
+++ b/_posts/manage/2025-02-09-팀관리_상태전환비용.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 팀 관리에서 간과하는 상태전환비용(context switching cost)
+title: 📋팀 관리에서 간과하는 상태전환비용(context switching cost)
 categories: MANAGE
 tag: [MANAGE]
 toc: true
