--- a/_posts/manage/2025-02-15-일관리_일의시작과끝.md
+++ b/_posts/manage/2025-02-15-일관리_일의시작과끝.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 모바일 개발에서 배운 것이 웹 개발에 미친 영향
+title: 📋모바일 개발에서 배운 것이 웹 개발에 미친 영향
 categories: MANAGE
 tag: [MANAGE]
 toc: true
@@ -9,7 +9,6 @@ toc: true
 #    nav: "docs"
 ---
 
-# 🎯 일의 시작과 끝: 모바일 개발에서 배운 것이 웹 개발에 미친 영향
 
 안드로이드 개발로 커리어를 시작했을 무렵, 사내에서만 사용 가능한 애플리케이션을 만들었다.  
 그때의 시스템 구축 경험과 습관이 현재까지 이어지고 있으며, 이는 웹 개발에도 큰 영향을 미쳤다.  
