--- a/_posts/scdf/2025-02-15-SCDF_도입검증.md
+++ b/_posts/scdf/2025-02-15-SCDF_도입검증.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: SCDF 도입을 위한 과제 선정 및 PoC 진행
+title: 🔀SCDF 도입을 위한 과제 선정 및 PoC 진행
 categories: SCDF
 tag: [SCDF]
 toc: true
