--- a/_posts/sm/2024-02-22-SM_알쓸운영_POS가느려져요.md
+++ b/_posts/sm/2024-02-22-SM_알쓸운영_POS가느려져요.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 알쓸운영 - PC프로그램(POS)이 느려져요.
+title: 💼알쓸운영 - PC프로그램(POS)이 느려져요.
 categories: SM
 tag: [sm, pos, 성능저하]
 #toc: true
