--- a/_posts/WebApplication/2022-05-11-node_웹_애플리케이션_아키텍쳐.md
+++ b/_posts/WebApplication/2022-05-11-node_웹_애플리케이션_아키텍쳐.md
@@ -1,6 +1,6 @@
 ---
 layout: single 
-title: Node.js 웹 애플리케이션 아키텍쳐 
+title: 🌐️Node.js 웹 애플리케이션 아키텍쳐 
 categories: WebApplication 
 tag: [Architecture]
 toc: true
