--- a/_posts/cloud/2024-03-23-cloud_오라클클라우드.md
+++ b/_posts/cloud/2024-03-23-cloud_오라클클라우드.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Cloud - 오라클 클라우드 시작하기(Database)
+title: ☁️Cloud - 오라클 클라우드 시작하기(Database)
 categories: Cloud
 tag: [Oracle Cloud]
 toc: true
