--- a/_posts/code/2024-03-05-code_js선언형프로그래밍(4).md
+++ b/_posts/code/2024-03-05-code_js선언형프로그래밍(4).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 표현력을 높여주는 도구를 이용하여 더 선언적이게 도와주는 도구 만들기 - 함수형 프로그래밍
+title: 🧑‍💻표현력을 높여주는 도구를 이용하여 더 선언적이게 도와주는 도구 만들기 - 함수형 프로그래밍
 categories: code
 tag: [함수형, FP, 패러다임, Javascript]
 toc: true
