--- a/_posts/code/2025-02-20-code_함수형프로그래밍(종합예제2).md
+++ b/_posts/code/2025-02-20-code_함수형프로그래밍(종합예제2).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "예제 - 더 복잡한 조건과 변화를 함수형프로그래밍으로 다루는법"
+title: 🧑‍💻"예제 - 더 복잡한 조건과 변화를 함수형프로그래밍으로 다루는법"
 categories: code
 tag: [함수형, FP, 패러다임, java]
 toc: true
