--- a/_posts/code/2025-02-20-code_함수형프로그래밍(종합예제3).md
+++ b/_posts/code/2025-02-20-code_함수형프로그래밍(종합예제3).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "예제 - DB나 API사용시 부작용을 줄이는 법"
+title: 🧑‍💻"예제 - DB나 API사용시 부작용을 줄이는 법"
 categories: code
 tag: [함수형, FP, 패러다임, java]
 toc: true
