--- a/_posts/pm/2025-02-23-BPR사례_제약물류통합(1).md
+++ b/_posts/pm/2025-02-23-BPR사례_제약물류통합(1).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "📦 제약사 그룹사 물류통합 BPR(1) - 현재 프로세스 분석"
+title: "📦 제약사 그룹사 물류통합 BPR(1) - 표준 물류 프로세스 분석"
 categories: Logistics
 tags: [BPR, 제약물류, 물류통합, 프로세스개선]
 toc: true
@@ -11,9 +11,10 @@ toc: true
 제약사 그룹사의 물류통합을 위해 **현재 프로세스를 분석**하고, BPR(업무 프로세스 재설계)을 통해 **효율성 개선 및 규제 준수 최적화**를 목표로 한다.
 
 ### ✅ 분석 범위
-- **일반 물류 흐름** vs **제약 물류 흐름** 비교
+- 프로세스 재설계 범위는 **고객의 주문 이후 시점**부터 이다
+- **일반 물류 흐름**과 **제약 물류 흐름** 비교
 - 물류 프로세스 단계별 주요 차이점 분석
-- **GMP/GDP 준수, WMS고도화, 2D 바코드 관리, 심평원 보고** 등을 고려한 최적화 방안 도출
+- **WMS고도화, 2D 바코드 관리, 심평원 보고** 등을 고려한 최적화 방안 도출
 
 ---
 
@@ -23,7 +24,7 @@ toc: true
 - 일반적인 물류 창고(WMS) 및 운송(TMS) 활용
 - **일반적인 품질 관리 적용** (온도·습도 관리 필요 없음)
 - **FIFO(선입선출) 방식 사용**
-~~~mermaid
+```mermaid
 graph TD;
     조달 --> 생산;
     생산 --> 창고보관;
@@ -31,7 +32,7 @@ graph TD;
     유통센터 --> 소매점/온라인;
     소매점/온라인 --> 소비자;
     소비자 --> 반품(필요시);
-~~~
+```
 
 ### 📌 단계별 분석
 | 단계 | 일반 물류 프로세스 |
@@ -51,21 +52,23 @@ graph TD;
 - **의약품 2D 바코드 관리(Serialization) 적용**
 - **FEFO(유통기한 기반 출하) 원칙 적용**
 - **심평원(건강보험심사평가원) 공급 보고 필요**
+- **거점창고(3PL)** 활용 
 
-~~~mermaid
+```mermaid
 graph TD;
     원료조달 --> 생산;
     생산 --> 품질검사;
     품질검사 --> 창고보관;
-    창고보관 --> 거점창고(3PL);
-    거점창고(3PL) --> 병원/약국/도매업체;
+    창고보관 --> 거점창고;
+    거점창고 --> 병원/약국/도매업체;
     병원/약국/도매업체 --> 소비자;
     소비자;
     병원/약국/도매업체 --> 심평원보고;
     병원/약국/도매업체 --> 환입;
-~~~
+```
 
 ### 📌 단계별 분석
+
 | 단계 | 제약 물류 프로세스 |
 |---|---|
 | **1. 원료 조달** | API(원료의약품) 및 부자재 조달 (GMP 품질 검사 필수) |
@@ -80,6 +83,7 @@ graph TD;
 ---
 
 ## 4️⃣ 일반 물류 vs 제약 물류 비교표
+
 | **구분** | **일반 물류** | **제약 물류** |
 |---|---|---|
 | **조달** | 원자재 공급업체에서 조달 | 원료의약품(API) 및 부자재 조달, **GMP 품질 검사 필수** |
