--- a/_posts/pm/2025-02-23-BPR사례_제약물류통합(1).md
+++ b/_posts/pm/2025-02-23-BPR사례_제약물류통합(1).md
@@ -24,6 +24,19 @@ toc: true
 - 일반적인 물류 창고(WMS) 및 운송(TMS) 활용
 - **일반적인 품질 관리 적용** (온도·습도 관리 필요 없음)
 - **FIFO(선입선출) 방식 사용**
+
+```mermaid
+  info
+```
+
+```mermaid
+  graph TD;
+      A-->B;
+      A-->C;
+      B-->D;
+      C-->D;
+```
+
 ```mermaid
 graph TD;
     조달 --> 생산;
