--- a/_posts/pm/2025-02-23-BPR사례_제약물류통합(2).md
+++ b/_posts/pm/2025-02-23-BPR사례_제약물류통합(2).md
@@ -1,12 +1,10 @@
 ---
 layout: single
-title: "📦 제약사 그룹사 물류통합 BPR - 현재 프로세스 분석 (제약 물류)"
+title: "📦 제약사 그룹사 물류통합 BPR(2) - 대상 제약물류 프로세스 분석"
 categories: Logistics
 tags: [BPR, 제약물류, 물류통합, 프로세스개선]
 toc: true
 ---
-
-# 📦 제약사 그룹사 물류통합 BPR - 현재 프로세스 분석 (제약 물류)
 
 ## 1️⃣ 프로젝트 개요
 ### ✅ 목표
