--- a/_posts/code/2025-02-20-code_함수형프로그래밍(순수함수).md
+++ b/_posts/code/2025-02-20-code_함수형프로그래밍(순수함수).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 🧑‍💻"핵심요소 - 함수형프로그래밍(순수함수)"
+title: 🧑‍💻핵심요소 - 함수형프로그래밍(순수함수)
 categories: code
 tag: [함수형, FP, 패러다임, java]
 toc: true
