--- a/_posts/code/2025-02-22-code_함수형프로그래밍(커링).md
+++ b/_posts/code/2025-02-22-code_함수형프로그래밍(커링).md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 🧑‍💻"함수형프로그래밍(커링, Currying)"
+title: 🧑‍💻함수형프로그래밍(커링, Currying)
 categories: code
 tag: [함수형, FP, 패러다임, java]
 toc: true
