--- a/_posts/info/2025-02-23-SCQ논리구조.md
+++ b/_posts/info/2025-02-23-SCQ논리구조.md
@@ -76,7 +76,7 @@ SCQ 논리구조를 활용하면 다음과 같은 장점이 있다.
 - 먼저 결론을 제시함으로써, **상대방이 핵심 메시지를 빠르게 이해**할 수 있다.
 
 ✅ **2) 논리적 근거를 기반으로 신뢰성을 높일 수 있다.**
-- 단순히 **"결론부터 말하라"**는 주장이 아니라, **논리적 문제와 해결 방향을 근거로 제시**할 수 있다.
+- 단순히 "결론부터 말하라"는 주장이 아니라, **논리적 문제와 해결 방향을 근거로 제시**할 수 있다.
 
 ✅ **3) 의사결정 속도를 높인다.**
 - 의사결정자는 **불필요한 설명을 듣지 않고도 중요한 정보를 빠르게 이해**할 수 있다.
